--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,12 @@
 /* styles go here */
+div {
+  margin-top: 10px;
+}
+
+fieldset {
+  margin-bottom: 20px;
+}
+
+div:nth-child(2) {
+  margin-top: 0;
+}
